package backend.dao;

public class BranchDAO {
}
