package backend.dao;

public class ClientDAO {
}
