package backend.dao;

public class EmployeeDAO {
}
