package backend.dao;

public class EquipmentDAO {
}
