package backend.models.gym;

import java.util.List;

public class Company {
    private String id;
    private String name;
    private List<Branch> branchesList;
    private Warehouse wareHouse;
}
