package backend.models.gym;

public class Equipment {
    private String id;
    private String name;
    private String model;
    private EquipmentStatus equipmentStatus;
    private int usageCount;
    private boolean needsMaintenance;
}
