package backend.models.gym;

public class InventoryItem {
    private String id;
    private Equipment equipment;
    private int quantity;
}
