package backend.models.gym;

import java.util.List;

public class Warehouse {
    private String id;
    private int totalSpareEquipments;
    private List<InventoryItem> equipments;
}
