package backend.models.users;

public class Administrator extends Employee {
    public void generateReports() {
    }

    public void registerEmployees() {
    }
}
