package backend.models.users;

public class InventoryManager extends Employee {
}
