package backend.models.users;

public class Receptionist extends Employee {
    public void regsiterClients() {

    }

    public void assignMemberships() {

    }

    public void consultReportsClients() {
    }
}
