package backend.models.users;

import lombok.*;

@Data
@NoArgsConstructor
public class User {
    private String id;
    private String userName;
}
