package backend.util;

public class Validator {
}
